// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppSidebarLink> matches snapshot when exact 1`] = `
<NavLink
  activeClassName="app-sidebar-link-active"
  className="app-sidebar-link"
  exact={true}
  onClick={[Function]}
  to="/tata"
/>
`;

exports[`<AppSidebarLink> matches snapshot when no exact 1`] = `
<NavLink
  activeClassName="app-sidebar-link-active"
  className="app-sidebar-link"
  onClick={[Function]}
  to="/toto"
/>
`;
